# rustauth

./: .env  .gitignore  API.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DATABASE.md  DEPLOYMENT.md  README.md  SECURITY.md  TROUBLESHOOTING.md  build.rs  commands.md  development.md  diesel.toml  installation.md  model_detection_report.md  readme.md  setup.md  verification_report.md
.cargo/: config.toml
migrations/: .schema_state.json
migrations/20260408074619_auto/: up.sql
migrations/20260408074647_auto/: up.sql
migrations/20260410092151_auto/: down.sql  up.sql
migrations/20260411082413_baseline_current_apps/: down.sql  up.sql
migrations/archive/: 20260411073939_schema_state.json
migrations/archive/20260407101804_initial/: down.sql  up.sql
protos/: blogs.proto
scripts/: diesel-schema.sh
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  model.rs  proto.rs  response.rs  schema.rs  state.rs
src/activitylog/: handler.rs  mod.rs  models.rs  schemas.rs
src/admin/: api.rs  app.rs  config.rs  initializer.rs  mod.rs  panel.rs  registry.rs  web.rs
src/admin/resource/: auth.rs  dashboard.rs  (+3 more)
src/apps/: mod.rs
src/blogs/: handler.rs  handlers.rs  mod.rs  models.rs  schema.rs  schemas.rs
src/commands/: common.rs  createsuperuser.rs  inspectdb.rs  migrations.rs  mod.rs  shell.rs  startapp.rs  tests.rs
src/middleware/: auth.rs  mod.rs
src/models/: mod.rs
src/newsite/: handler.rs  mod.rs  models.rs  schemas.rs
src/products/: handler.rs  mod.rs  models.rs  schemas.rs
src/user/: handler.rs  handlers.rs  mod.rs  models.rs  schema.rs  schemas.rs
(+23 files in other folders)
